# fj

./: .clang-format  .gitignore  CMakeLists.txt  PLAN.md  README.md  TODO.md
contentmanipulation/: CMakeLists.txt  README.md
minibrowser/: CMakeLists.txt  README.md
resources/: resources.qrc
scripts/: setup.ps1
src/: animatedgraphicsitem.cpp  animatedgraphicsitem.h  capsLockModifier.cpp  capsLockModifier.h  cardItem.cpp  cardItem.h  cardStack.cpp  cardStack.h  common.h  constants.h  contentItem.cpp  contentItem.h  cursor.cpp  cursor.h  disableCapsLock.cpp  disableCapsLock.h  indexItem.cpp  indexItem.h  main.cpp  mainwindow.cpp  mainwindow.h  rowItem.cpp  rowItem.h  squareGraphicsView.cpp  squareGraphicsView.h  tocItem.cpp  tocItem.h  topicItem.cpp  topicItem.h
src/linux/: disableCapsLock.cpp  disableCapsLock.h
src/win32/: disableCapsLock.cpp
